{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 26,
  "lineage": "dfca5f1f-d77e-cf78-e261-1236e5171b0e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "vijay-alb-target-group-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:961417237065:targetgroup/vijay-app-dev-vijay-alb-tg/f76ffa9f2ddf7125-20220728190136487000000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:961417237065:targetgroup/vijay-app-dev-vijay-alb-tg/f76ffa9f2ddf7125",
            "target_id": "i-0abb7d224549e7352"
          },
          "dependencies": [
            "aws_instance.vijay-server",
            "aws_key_pair.key_pair",
            "aws_lb_target_group.vijay-alb-target-group",
            "aws_security_group.aws-vijay-sg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc",
            "data.aws_ami.amazon-linux-2022",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vijay-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098e42ae54c764c35",
            "arn": "arn:aws:ec2:us-west-2:961417237065:instance/i-0abb7d224549e7352",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:961417237065:key/5e481a5a-b4a0-4ee6-b251-17137ee940bd",
                "throughput": 0,
                "volume_id": "vol-09bd12b0300d57a19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abb7d224549e7352",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vijay-app-dev-vijay-us-west-2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c661fa324f7d321c",
            "private_dns": "ip-10-11-1-65.us-west-2.compute.internal",
            "private_ip": "10.11.1.65",
            "public_dns": "ec2-54-190-171-34.us-west-2.compute.amazonaws.com",
            "public_ip": "54.190.171.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:961417237065:key/5e481a5a-b4a0-4ee6-b251-17137ee940bd",
                "throughput": 0,
                "volume_id": "vol-09bd12b0300d57a19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-023fa3e0383c6f249",
            "tags": {
              "Environment": "dev",
              "Name": "vijay-app-dev-vijay-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vijay-app-dev-vijay-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b9847829134228ed"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.aws-vijay-sg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc",
            "data.aws_ami.amazon-linux-2022",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961417237065:internet-gateway/igw-0a7211ac7caa481a2",
            "id": "igw-0a7211ac7caa481a2",
            "owner_id": "961417237065",
            "tags": {
              "Environment": "dev",
              "Name": "vijay-app-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vijay-app-dev-igw"
            },
            "vpc_id": "vpc-0df7dd8c459847f44"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "vijay-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:961417237065:loadbalancer/app/vijay-app-dev-vijay-alb/79bddf330711a8e6",
            "arn_suffix": "app/vijay-app-dev-vijay-alb/79bddf330711a8e6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "vijay-app-dev-vijay-alb-497846943.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": false,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:961417237065:loadbalancer/app/vijay-app-dev-vijay-alb/79bddf330711a8e6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vijay-app-dev-vijay-alb",
            "security_groups": [
              "sg-0f5db2bf60ddc416f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023fa3e0383c6f249"
              },
              {
                "subnet_id": "subnet-0309a1aa235baff20"
              },
              {
                "subnet_id": "subnet-074a920d5816621e1"
              }
            ],
            "subnets": [
              "subnet-023fa3e0383c6f249",
              "subnet-0309a1aa235baff20",
              "subnet-074a920d5816621e1"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vijay-app-dev-vijay-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vijay-app-dev-vijay-alb"
            },
            "vpc_id": "vpc-0df7dd8c459847f44",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.vijay-alb-sg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_subnet.public-subnet-3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vijay-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:961417237065:listener/app/vijay-app-dev-vijay-alb/79bddf330711a8e6/c912cd9ed7d6cc18",
            "certificate_arn": "arn:aws:acm:us-west-2:961417237065:certificate/ce52bc01-7802-4b10-a0f0-1427b4f33e3b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:961417237065:targetgroup/vijay-app-dev-vijay-alb-tg/f76ffa9f2ddf7125",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:961417237065:listener/app/vijay-app-dev-vijay-alb/79bddf330711a8e6/c912cd9ed7d6cc18",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:961417237065:loadbalancer/app/vijay-app-dev-vijay-alb/79bddf330711a8e6",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.vijay-alb-certificate",
            "aws_lb.vijay-alb",
            "aws_lb_target_group.vijay-alb-target-group",
            "aws_security_group.vijay-alb-sg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_subnet.public-subnet-3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:961417237065:targetgroup/vijay-app-dev-vijay-alb-tg/f76ffa9f2ddf7125",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:961417237065:listener-rule/app/vijay-app-dev-vijay-alb/79bddf330711a8e6/c912cd9ed7d6cc18/c6e2e56dcf7c1abb",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "lbtest.vijay4devops.co"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:961417237065:listener-rule/app/vijay-app-dev-vijay-alb/79bddf330711a8e6/c912cd9ed7d6cc18/c6e2e56dcf7c1abb",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:961417237065:listener/app/vijay-app-dev-vijay-alb/79bddf330711a8e6/c912cd9ed7d6cc18",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.vijay-alb-certificate",
            "aws_lb.vijay-alb",
            "aws_lb_listener.vijay-alb-listener",
            "aws_lb_target_group.vijay-alb-target-group",
            "aws_security_group.vijay-alb-sg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_subnet.public-subnet-3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vijay-alb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:961417237065:targetgroup/vijay-app-dev-vijay-alb-tg/f76ffa9f2ddf7125",
            "arn_suffix": "targetgroup/vijay-app-dev-vijay-alb-tg/f76ffa9f2ddf7125",
            "connection_termination": false,
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:961417237065:targetgroup/vijay-app-dev-vijay-alb-tg/f76ffa9f2ddf7125",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "vijay-app-dev-vijay-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0df7dd8c459847f44"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961417237065:route-table/rtb-00dc437c829d3b94e",
            "id": "rtb-00dc437c829d3b94e",
            "owner_id": "961417237065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7211ac7caa481a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vijay-app-dev-public-subnet-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vijay-app-dev-public-subnet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df7dd8c459847f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5d78766f11583a0",
            "route_table_id": "rtb-00dc437c829d3b94e",
            "subnet_id": "subnet-023fa3e0383c6f249"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd7b626c01d5aa4f",
            "route_table_id": "rtb-00dc437c829d3b94e",
            "subnet_id": "subnet-0309a1aa235baff20"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d36665b1bb975b93",
            "route_table_id": "rtb-00dc437c829d3b94e",
            "subnet_id": "subnet-074a920d5816621e1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet-3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-vijay-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961417237065:security-group/sg-0b9847829134228ed",
            "description": "Allow incoming HTTP connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9847829134228ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vijay-app-dev-vijay-sg",
            "name_prefix": "",
            "owner_id": "961417237065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vijay-app-dev-vijay-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vijay-app-dev-vijay-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df7dd8c459847f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vijay-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961417237065:security-group/sg-0f5db2bf60ddc416f",
            "description": "Allow web traffic to the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5db2bf60ddc416f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vijay-app-dev-vijay-alb-sg",
            "name_prefix": "",
            "owner_id": "961417237065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vijay-app-dev-vijay-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vijay-app-dev-vijay-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df7dd8c459847f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961417237065:subnet/subnet-023fa3e0383c6f249",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023fa3e0383c6f249",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961417237065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vijay-app-dev-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vijay-app-dev-public-subnet-1"
            },
            "vpc_id": "vpc-0df7dd8c459847f44"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961417237065:subnet/subnet-0309a1aa235baff20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.11.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0309a1aa235baff20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961417237065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vijay-app-dev-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vijay-app-dev-public-subnet-2"
            },
            "vpc_id": "vpc-0df7dd8c459847f44"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961417237065:subnet/subnet-074a920d5816621e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.11.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074a920d5816621e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961417237065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vijay-app-dev-public-subnet-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vijay-app-dev-public-subnet-3"
            },
            "vpc_id": "vpc-0df7dd8c459847f44"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961417237065:vpc/vpc-0df7dd8c459847f44",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-088c3ddfef6d2c236",
            "default_route_table_id": "rtb-0679691104cdec26a",
            "default_security_group_id": "sg-09679ea01a4c919c9",
            "dhcp_options_id": "dopt-0c216c055d7d54088",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0df7dd8c459847f44",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0679691104cdec26a",
            "owner_id": "961417237065",
            "tags": {
              "Environment": "dev",
              "Name": "vijay-app-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vijay-app-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}